--- a/style.css
+++ b/style.css
@@ -228,6 +228,63 @@ body{
     background: #52baff;
     color: #1d1d1d;
 }
+
+.search{
+    width: 80%;
+    position: relative;
+    z-index: 10;
+    max-width: 1500px;
+    margin: auto;
+    justify-content: left;
+    text-align: left;
+    flex-wrap: wrap;
+}
+.col-src{
+    display: inline;
+    width: 25%;
+    padding: 10px;
+    box-sizing: border-box;
+
+}
+.table-src{
+    background: #c5eff7;
+    padding: 40px 20px;
+    border-radius: 10px;
+
+}
+.table-src ul{
+    margin: 0;
+    padding: 0;
+
+}
+.table-src ul li {
+    padding: 10px 0;
+    list-style: none;
+
+}
+.table-src a{
+    width: 20%;
+    text-align: center;
+    text-decoration: none;
+    color: #151515;
+    border: 2px solid #b3b3b3;
+    display: block;
+    padding: 5px 0;
+    margin: 10px 0;
+    border-radius: 10px;
+    text-transform: uppercase;
+    font-size: 14px;
+    transition: 0.5s linear;
+}
+.table-src a:hover{
+    background: #52baff;
+    color: #1d1d1d;
+}
+.src{
+    width:50%;
+    display:inline-block;
+    margin-left: 10px;
+}
 .pdh{
     margin: 170px 0 30px;
     width: 100%;
@@ -351,6 +408,12 @@ body{
 
 @media only screen and (max-width : 600px){
     
+.table-src a{
+    width: 50%;
+}
+    .search .col-src .table-src img{
+        width: 100%;
+    }
     .logo{
         margin-left: 10%;
         width: 80%;
@@ -426,6 +489,12 @@ body{
 }
 @media only screen and (min-width : 601px) and (max-width : 1124px){
     
+    .table-src a{
+        width: 50%;
+    }
+    .search .col-src .table-src img{
+        width: 100%;
+    }
     .logo{
         margin-left: 10%;
         width: 80%;
