--- a/style.css
+++ b/style.css
@@ -489,7 +489,7 @@ body{
 }
 @media only screen and (min-width : 601px) and (max-width : 1124px){
     .gbr-gallery{
-        margin-top: 205;
+        margin-top: 205px;
     }
     .des-table-destinasi{
         top:250px;
